# HEX

./: CMakeLists.txt  Makefile  TODO  actions.cpp  header.h  main.cpp  manual.cpp  monitor.cpp  run.sh  run_home.sh  wp_home  wp_race
LIB_AUTONAV/: autonav.cpp  autonav.h
LIB_AXSERVO/: README  axservo.cpp  axservo.h
LIB_HEXAPOD/: .hexapod.h.swp  hexapod.cpp  hexapod.h
LIB_LOGGER/: logger.cpp  logger.h
LIB_PACKET/: RESERVED_TAGS  packet.cpp  packet.h
LIB_SERIAL/: README  serial.cpp  serial.h
LIB_SLAM/: scan.h  slam.cpp  slam.h
PROG_HWMGR/: prog_hwmgr.ino
PROG_LIDAR/: Makefile  README  prog_lidar.ino
PROG_SCONTROL/: prog_scontrol.ino
TESTS/lidar_debug/: Makefile  lidar_debug  main.cpp
TESTS/logtest/: Makefile  main.cpp
TESTS/navtest/: Makefile  main.cpp
TESTS/reconstruct/: Makefile  main.cpp
TESTS/remotecontrol/: Makefile  main.cpp  run.sh
TESTS/sdltest/: Makefile  main.cpp  panel.h
TESTS/sendpacket/: Makefile  listen.cpp  main.cpp  repeater.cpp
TESTS/slamtest/: Makefile  main.cpp
TESTS/webapps/: bez.js  page.html  slam.js  walker.js
hardware/: CMakeLists.txt
hardware/arbotix/cores/arbotix/: HardwareSerial.cpp
libs/LIB_AUTONAV/: README  autonav.h
libs/LIB_HEXAPOD/: README  bezier2d.h
libs/LIB_PACKET/: packet.h
libs/LIB_SLAM/: slam.h
libs/packet/: README
servo_controller/: README  servo_controller.cpp
src/hex/include/: header.h
src/hex/src/: manual.cpp  monitor.cpp
src/servo_controller/: CMakeLists.txt
src/servo_controller/src/: servo_controller.cpp
src/tests/navtest/: main.cpp
src/tests/remotecontrol/: Makefile
src/tests/sendpacket/: main.cpp  repeater.cpp
src/tests/webapps/: bez.js  page.html  walker.js
